10/29/07 Ken Jones
         - release version 1.4.0 with p0f code moved to qmail-smtpd

03/11/07 Ken Jones
         - for dspam only authorized users can send email to spam@ and nospam@,
           includes support for custom smtp error message

05/18/06 George Breahna
         - first version of DSPAM support

         R
         - add u_char casting to isupper and tolower

01/07/06 Ken Jones
         - envoke ripmime with --disable-qmail-bounce

01/07/06 Ken Jones
         - reject blank envelopes with proper error

10/05/05 Ken Jones
         - found an IsSpam=1.0 instead of IsSpam==1
            for the spam passthru setting

10/04/05 Ken Jones
         - virus drop message was not exiting at the right time.
             Found by Russ Lists
         - use per domain hit count on spam log message if set.
         - if read from standard in fails the temp file was not
             closed so the temporary work directory would not
             be removed. 

09/30/05 Ken Jones
         - put 's' at the end of processing time and
            move to after status.
         - add RELAYCLIENT log line. suggested by Sim
         - replace --with-pcre with two new ones
            --with-pcre-lib --with-pcre-include
         - update configure regex section to report the
            two new --with-pcre lines
         - A value of 5 was being checked instead of
            the SPAM_HITS value. Found by Jeremy Kister.
         - Change SpamHits > to SpamHits >=
           

09/28/05 Ken Jones
         - update logging documentation on qmailwiki.org
         - add VIRUS DROPPED logging message
         - clearer --enable-spam-auth-user config message
         - put #ifdef ENABLE_SPAM around the spam processing
            section in per_domain_lookup() function 
            Reported by Gerad Earley
         - Change received header printf to %d for compiler warnings
         - add SPAM DROPPED log message
         - add processing time field to logging