@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(simscan.c)
-AM_INIT_AUTOMAKE(simscan,1.4.0)
+AM_INIT_AUTOMAKE(simscan,1.4.1)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 AC_CHECK_FUNCS([strsep])
@@ -619,6 +619,10 @@ AC_ARG_ENABLE(received, [  --enable-received=y|n   Add a Received: line to the m
         for f in "$CLAMAV_DB" /usr/local/share/clamav /var/lib/clamav
         do
           if test -f "$f/daily.cvd"
+          then
+            clamavdb=$f
+            break
+          elif test -f "$f/daily.inc/daily.info"
           then
             clamavdb=$f
             break
